--- a/src/style.css
+++ b/src/style.css
@@ -2,3 +2,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@font-face {
+  font-family: "ADELIA";
+  src: url("./assets/fonts/Geist.otf");
+}
